--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,6 +10,7 @@ source:
   md5: 3ed0579456d9f24ef30ea0f9baf995f0
 
 build:
+  noarch: python
   number: 1000
   script: python setup.py install --single-version-externally-managed --record=record.txt
   entry_points:
